# credential-protocol-contracts

./: IMPLEMENTATION_EXAMPLE.md  README.md
benches/: Cargo.toml  load_test_batch_operations.rs
benches/src/: lib.rs
benches/tests/: benchmarks.rs
contracts/: dependencies.toml
contracts/credential_protocol/: API.md  Cargo.toml  fuzz_tests.rs
contracts/credential_protocol/src/: circuit_breaker.rs  lib.rs  lib.rs.bak  proptest_credentials.rs  proptest_slices.rs  proptest_state_transitions.rs  rbac.rs  tests_new_features.rs  weighted_voting_tests.rs
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/src/: audit_trail.rs  chaos.rs  contract_analytics.rs  contract_upgrade_testing.rs  deployment_verification.rs  incident_response.rs  invariants.rs  lib.rs  upgrade_safety.rs
contracts/quorum_proof/: Cargo.toml
contracts/quorum_proof/src/: lib.rs
contracts/quorum_proof/test_snapshots/tests/: test_issue_and_get_credential.1.json  (+5 more)
contracts/sbt_registry/: Cargo.toml
contracts/sbt_registry/src/: lib.rs
contracts/sbt_registry/test_snapshots/tests/: test_mint_and_ownership.1.json
contracts/sbt_registry/tests/: credential_access.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
monitoring/: docker-compose.yml
monitoring/exporter/: __init__.py  exporter.py  metrics.py
monitoring/grafana/dashboards/: api-latency.json  attestation-health.json  contract-health.json  credential-volume.json
monitoring/loki/: promtail.yml
monitoring/prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
(+3 files in other folders)
