[package]
name = "credential-protocol-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
soroban-sdk = { version = "21.7", features = ["testutils"] }
credential_protocol = { path = "../contracts/credential_protocol", features = ["testutils"] }
sbt_registry = { path = "../contracts/sbt_registry", features = ["testutils"] }
zk_verifier = { path = "../contracts/zk_verifier", features = ["testutils"] }
