[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
credential_protocol = { path = "../credential_protocol", features = ["testutils"] }
sbt_registry = { path = "../sbt_registry", features = ["testutils"] }
zk_verifier = { path = "../zk_verifier", features = ["testutils"] }
